--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #0095dd;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
